# csa

./: .gitignore  CMakeLists.txt  Makefile  README.md  ca_builder.cc  ca_cli.cc  ca_graph.sh  csa.cc  csa.hh  csa_bench.cc  csa_check.cc  csa_errors.hh  default.nix  flake.nix  main.cc  pytest.ini  requirements-test.txt
re2/: ca.hh  ca_builder.cc  ca_builder.hh  compile.cc  csa.cc  csa.hh  flat_regexp.cc  flat_regexp.hh  glushkov.cc  glushkov.hh  glushkov2.cc  parse.cc  perl_groups.cc  prog.cc  prog.h  range_builder.hh  re2.cc  re2.h  regex.hh  regexp.cc  regexp.h  simplify.cc  sparse_array.h  sparse_set.h  stringpiece.cc  tostring.cc  unicode_casefold.cc  unicode_casefold.h  unicode_groups.cc  walker-inl.h
re2/util/: logging.h  rune.cc  strutil.cc  strutil.h
rust_benchmark/: Cargo.toml  README.md
rust_benchmark/src/: lib.rs
src/: ca.hh  ca_cli.cc  csa.cc  csa.hh  csa_c_api.cc  glushkov.cc  glushkov.hh  glushkov2.cc  glushkov2.hh  regex.hh
tests/: conftest.py  test_match.py  test_performance.py
util/: ord_vector.hh
